--- a/package.json
+++ b/package.json
@@ -25,12 +25,21 @@
     "@babel/preset-react": "^7.18.6",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
+    "bulma": "^0.9.4",
+    "bulma-helpers": "^0.4.3",
+    "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "joi": "^17.6.0",
     "joi-browser": "^13.4.0",
+    "material-design-icons": "^3.0.1",
+    "path": "^0.12.7",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.4",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "webpack": "^5.74.0",
