--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "html-webpack-plugin": "^5.5.0",
     "joi": "^17.6.0",
     "joi-browser": "^13.4.0",
+    "jsonwebtoken": "^8.5.1",
     "material-design-icons": "^3.0.1",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.1.7",
     "react-paginate": "^8.1.4",
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.4.1",
