--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "path": "^0.12.7",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-date-picker": "^9.1.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.1.7",
     "react-paginate": "^8.1.4",
